docs/1.13/api/interfaces/hostenvironmentinfo.md
**[js-miniapp-sdk](../README.md)**

> [Globals](../README.md) / HostEnvironmentInfo

# Interface: HostEnvironmentInfo

HostEnvironmentInfo type.

## Hierarchy

* **HostEnvironmentInfo**

## Index

### Properties

* [hostLocale](hostenvironmentinfo.md#hostlocale)
* [hostVersion](hostenvironmentinfo.md#hostversion)
* [platform](hostenvironmentinfo.md#platform)
* [platformVersion](hostenvironmentinfo.md#platformversion)
* [sdkVersion](hostenvironmentinfo.md#sdkversion)

## Properties

### hostLocale

• `Optional` **hostLocale**: string

*Defined in [js-miniapp-bridge/src/types/host-environment-info.ts:9](https://github.com/rakutentech/js-miniapp/blob/68a59c0/js-miniapp-bridge/src/types/host-environment-info.ts#L9)*

___

### hostVersion

• `Optional` **hostVersion**: string

*Defined in [js-miniapp-bridge/src/types/host-environment-info.ts:7](https://github.com/rakutentech/js-miniapp/blob/68a59c0/js-miniapp-bridge/src/types/host-environment-info.ts#L7)*

___

### platform

• `Optional` **platform**: [Platform](../enums/platform.md)

*Defined in [js-miniapp-bridge/src/types/host-environment-info.ts:5](https://github.com/rakutentech/js-miniapp/blob/68a59c0/js-miniapp-bridge/src/types/host-environment-info.ts#L5)*

___

### platformVersion

• `Optional` **platformVersion**: string

*Defined in [js-miniapp-bridge/src/types/host-environment-info.ts:6](https://github.com/rakutentech/js-miniapp/blob/68a59c0/js-miniapp-bridge/src/types/host-environment-info.ts#L6)*

___

### sdkVersion

• `Optional` **sdkVersion**: string

*Defined in [js-miniapp-bridge/src/types/host-environment-info.ts:8](https://github.com/rakutentech/js-miniapp/blob/68a59c0/js-miniapp-bridge/src/types/host-environment-info.ts#L8)*
