docs/1.20/api/interfaces/hostenvironmentinfo.md
**[js-miniapp-sdk](../README.md)**

> [Globals](../README.md) / HostEnvironmentInfo

# Interface: HostEnvironmentInfo

HostEnvironmentInfo type.

## Hierarchy

* **HostEnvironmentInfo**

## Index

### Properties

* [deviceToken](hostenvironmentinfo.md#devicetoken)
* [hostBuildType](hostenvironmentinfo.md#hostbuildtype)
* [hostLocale](hostenvironmentinfo.md#hostlocale)
* [hostVersion](hostenvironmentinfo.md#hostversion)
* [platform](hostenvironmentinfo.md#platform)
* [platformVersion](hostenvironmentinfo.md#platformversion)
* [pushToken](hostenvironmentinfo.md#pushtoken)
* [sdkVersion](hostenvironmentinfo.md#sdkversion)

## Properties

### deviceToken

• `Optional` **deviceToken**: string

*Defined in [js-miniapp-bridge/src/types/host-environment-info.ts:11](https://github.com/rakutentech/js-miniapp/blob/df2c090/js-miniapp-bridge/src/types/host-environment-info.ts#L11)*

___

### hostBuildType

• `Optional` **hostBuildType**: [HostBuildType](../enums/hostbuildtype.md)

*Defined in [js-miniapp-bridge/src/types/host-environment-info.ts:10](https://github.com/rakutentech/js-miniapp/blob/df2c090/js-miniapp-bridge/src/types/host-environment-info.ts#L10)*

___

### hostLocale

• `Optional` **hostLocale**: string

*Defined in [js-miniapp-bridge/src/types/host-environment-info.ts:9](https://github.com/rakutentech/js-miniapp/blob/df2c090/js-miniapp-bridge/src/types/host-environment-info.ts#L9)*

___

### hostVersion

• `Optional` **hostVersion**: string

*Defined in [js-miniapp-bridge/src/types/host-environment-info.ts:7](https://github.com/rakutentech/js-miniapp/blob/df2c090/js-miniapp-bridge/src/types/host-environment-info.ts#L7)*

___

### platform

• `Optional` **platform**: [Platform](../enums/platform.md)

*Defined in [js-miniapp-bridge/src/types/host-environment-info.ts:5](https://github.com/rakutentech/js-miniapp/blob/df2c090/js-miniapp-bridge/src/types/host-environment-info.ts#L5)*

___

### platformVersion

• `Optional` **platformVersion**: string

*Defined in [js-miniapp-bridge/src/types/host-environment-info.ts:6](https://github.com/rakutentech/js-miniapp/blob/df2c090/js-miniapp-bridge/src/types/host-environment-info.ts#L6)*

___

### pushToken

• `Optional` **pushToken**: string

*Defined in [js-miniapp-bridge/src/types/host-environment-info.ts:12](https://github.com/rakutentech/js-miniapp/blob/df2c090/js-miniapp-bridge/src/types/host-environment-info.ts#L12)*

___

### sdkVersion

• `Optional` **sdkVersion**: string

*Defined in [js-miniapp-bridge/src/types/host-environment-info.ts:8](https://github.com/rakutentech/js-miniapp/blob/df2c090/js-miniapp-bridge/src/types/host-environment-info.ts#L8)*
